--- a/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
@@ -14,7 +14,7 @@
         <scene sceneID="rlG-dG-COx">
             <objects>
                 <viewController storyboardIdentifier="DashboardDetailsID" id="uMo-jK-dNo" customClass="DashboardDetailsController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="sKb-T8-UIk">
+                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="sKb-T8-UIk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
